data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1947.wast
;; 8. **Test Description**: Develop a `br_if` instruction that jumps backward within a `loop` based on an operand stack containing extraneous types. Couple this with `br_table` instruction using incorrect indices. Evaluate how `wizard_engine` handles operand stack correctly in comparison to WASM.

(assert_invalid
  (module (func $br_if_loop_extraneous (block (loop (br_if 1 (i32.const 1) (f32.const 0.0)))))) 
  "type mismatch"
)